# ecs_wasm_game5

./: Cargo.toml  deploy.sh  package-lock.json  package.json
app/: init_handler.rs
docs/: project_plan.md
server/: ws_server.js
src/: component.rs  lib.rs  network.rs  protocol.rs  rules.rs  system.rs  world.rs
src/app/: browser_event_manager.rs  drag_apply_handler.rs  drag_handler.rs  event_handler.rs  game_app.rs  init_handler.rs  layout_calculator.rs  mod.rs  network_connector.rs  network_handler.rs  network_receiver.rs  network_sender.rs  renderer.rs  state_getter.rs  state_handler.rs  stock_handler.rs
src/components/: card.rs  dragging_info.rs  game_state.rs  mod.rs  player.rs  position.rs  stack.rs
src/config/: layout.rs  mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs  world_tests.rs
src/logic/: auto_move.rs  deck.rs  mod.rs  rules.rs
src/logic/rules/: common.rs  foundation.rs  mod.rs  move_validation.rs  stock_waste.rs  tableau.rs  tests.rs  win_condition.rs
src/systems/: auto_move_system.rs  deal_system.rs  event_handler_system.rs  mod.rs  move_card_system.rs  player_input.rs  win_condition_system.rs
www/: bootstrap.js  index.html  style.css
