[package]
name = "ecs_wasm_game5"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'CanvasRenderingContext2d',
    'Response',
    'WebSocket',
    'MessageEvent',
    'ErrorEvent',
    'CloseEvent',
    'BinaryType',
    'Blob',
    'FileReader',
    'ProgressEvent',
    'console',
]}
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
wasm-bindgen-futures = "0.4.43"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
warp = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
opt-level = 's'
