[package]
name = "ecs_wasm_game5"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement", "Window", "CanvasRenderingContext2d", "Response", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "Blob", "FileReader", "ProgressEvent", "console", "DomTokenList", "CssStyleDeclaration", "Event", "EventTarget", "MouseEvent", "HtmlSpanElement", "DomRect"] }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
wasm-bindgen-futures = "0.4.43"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
opt-level = 's'
